# expense-flow

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: Header.tsx  Layout.tsx  Sidebar.tsx
frontend/src/lib/: utils.ts
frontend/src/pages/: Analytics.tsx  Categories.tsx  Dashboard.tsx  Expenses.tsx  Gamification.tsx  Insights.tsx  Login.tsx  Recurring.tsx  Register.tsx  Settings.tsx  Staff.tsx
frontend/src/store/: auth.tsx  theme.tsx
src/: config.py  database.py  main.py  models.py
src/auth/: __init__.py  mfa.py  middleware.py  password.py  session.py
src/db/: __init__.py  connection.py  schema.py
src/db/repositories/: audit_log.py  category.py  expense.py  gamification.py  payment_method.py  recurring.py  staff.py
src/providers/: base.py  factory.py  groq.py  openrouter.py
src/services/: analytics_service.py  backup_service.py  budget_service.py  category_service.py  data_service.py  expense_service.py  gamification_service.py  insight_service.py  recurring_service.py  undo_service.py
src/ui/: app.py
src/ui/components/: charts.py  logo.py  menu.py  qr.py  themes.py
src/ui/screens/: analytics.py  auth.py  base.py  categories.py  expense.py  gamification.py  insights.py  recurring.py  reports.py  (+2 more)
src/web/: __init__.py  server.py
tests/: test_config.py  test_database.py  test_services.py
(+22 files in other folders)
