[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "smart-expense-tracker"
version = "0.2.0"
description = "Smart Expense Tracker with AI-powered insights for Seamless Technologies staff"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "rich>=13.0.0",
    "requests>=2.28.0",
    "bcrypt>=4.0.0",
    "pyotp>=2.9.0",
    "PyJWT>=2.8.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.0",
    "sse-starlette>=1.6.0",
    "qrcode>=7.4",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
expense-tracker = "src.main:main"
